# TaintTracking

./: .gitignore  CMakeLists.txt  README
TaintTracking/: CMakeLists.txt  TaintTracking.cpp
TaintTracking/tool/: Cargo.toml
TaintTracking/tool/src/: lib.rs
test/: test.bc  test.c  test1.c  test2.c  test3.bc  test3.c  test4.bc  test4.c  test5.bc  test5.c  test6.bc  test6.c
